[gd_scene load_steps=5 format=2]

[ext_resource path="res://Interface/Theme.tres" type="Theme" id=1]
[ext_resource path="res://GFX/Interface/Fonts/kenvector_future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Interface/PauseMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[node name="Pause" type="CanvasLayer"]
process_priority = -1

[node name="PauseMenu" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00784314, 0.203922, 0.164706, 0.45098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/CenterContainer"]
margin_left = 300.0
margin_top = 239.0
margin_right = 724.0
margin_bottom = 361.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_right = 424.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 1 )
text = "game paused"

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 424.0
margin_bottom = 122.0
custom_constants/separation = 50
alignment = 1

[node name="UnpauseButton" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 140.0
margin_bottom = 18.0
rect_min_size = Vector2( 40, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Unpause"

[node name="RestartButton" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 190.0
margin_right = 281.0
margin_bottom = 18.0
rect_min_size = Vector2( 40, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Restart"

[node name="QuitButton" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 331.0
margin_right = 375.0
margin_bottom = 18.0
rect_min_size = Vector2( 40, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "quit"
[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/HBoxContainer/UnpauseButton" to="PauseMenu" method="_on_UnpauseButton_pressed"]
[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/HBoxContainer/RestartButton" to="PauseMenu" method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/HBoxContainer/QuitButton" to="PauseMenu" method="_on_QuitButton_pressed"]
